# backend_llm_dsl

./: .env.example  .gitignore  AGENTS.md  blueprint.yaml  generate.py  generate.sh  generate_cases.py  init_nest_project.py  main.py  metrics_collector.py  package-lock.json  pyproject.toml  requirements.txt  test_cases.yaml  test_providers.py  test_runtime_endpoints.py  test_single_case.py  validate.py  validate_test_cases.py
docs/: global_diagram.md  validate_diagram.md
dsl/: blueprint.yaml  example.yaml  generate.py
dsl/core/: root.py
dsl/pkg/: root.py
dsl/utils/: logger.py
llm/: main.py  raw_generator.py  yaml_generator.py  yaml_generator_multi.py
src/dsl/: generate.py
src/llm/: dsl_generate.py  mixed_generate.py  prompts.py  raw_generate.py  raw_generator.py  yaml_generator.py  yaml_generator_multi.py
src/shared/: __init__.py  config.py  exceptions.py  template_helper.py  utils.py
src/validators/: __init__.py  main.py
templates/: entity.ts.j2
templates/dto/: create-dto.ts.j2
test_metrics/: metrics_results.json  metrics_summary.txt
tests/: analyze_results.py  generate_cases.py  init_nest_project.py  metrics_collector.py  run_demo_metrics.sh  run_experiments.py  test_cases.yaml  test_providers.py  test_results.json  test_single_case.py  visualize_metrics.py
tests/helpers/: init_nest_project.py
tests/unit/: __init__.py  conftest.py
validate/: __init__.py  kill_port.py  runtime.py  syntactic.py
validate/runtime_validators/: __init__.py  endpoint_tester.py  npm_commands.py
validate/shared/: __init__.py  (+2 more)
validators/: __init__.py  main.py
(+43 files in other folders)
